Fixed issue on mobile

--- a/src/styles/mixins.scss
+++ b/src/styles/mixins.scss
@@ -142,4 +142,5 @@
   width: 100%;
   height: 100%;
   z-index: 9;
+  left: 0;
 }
